--- a/end-to-end/heart-disease-classification.ipynb
+++ b/end-to-end/heart-disease-classification.ipynb
@@ -2823,7 +2823,7 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 100 out of 100 | elapsed:    1.1s finished\n"
+      "[Parallel(n_jobs=1)]: Done 100 out of 100 | elapsed:    0.8s finished\n"
      ]
     },
     {
@@ -3041,7 +3041,7 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 150 out of 150 | elapsed:    0.9s finished\n"
+      "[Parallel(n_jobs=1)]: Done 150 out of 150 | elapsed:    1.2s finished\n"
      ]
     },
     {
@@ -3293,7 +3293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 49,
    "id": "caring-calendar",
    "metadata": {},
    "outputs": [
@@ -3327,7 +3327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 50,
    "id": "powered-coast",
    "metadata": {},
    "outputs": [
@@ -3337,7 +3337,7 @@
        "{'C': 0.20433597178569418, 'solver': 'liblinear'}"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3349,7 +3349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 51,
    "id": "dense-sarah",
    "metadata": {},
    "outputs": [],
@@ -3361,7 +3361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 52,
    "id": "modular-condition",
    "metadata": {},
    "outputs": [
@@ -3371,7 +3371,7 @@
        "0.8446994535519124"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3385,7 +3385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 53,
    "id": "going-sector",
    "metadata": {},
    "outputs": [
@@ -3395,7 +3395,7 @@
        "0.8207936507936507"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3409,7 +3409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 54,
    "id": "private-think",
    "metadata": {},
    "outputs": [
@@ -3419,7 +3419,7 @@
        "0.9212121212121213"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3433,7 +3433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 55,
    "id": "visible-prior",
    "metadata": {},
    "outputs": [
@@ -3443,7 +3443,7 @@
        "0.8673007976269721"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3457,7 +3457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 56,
    "id": "acting-medicine",
    "metadata": {},
    "outputs": [
@@ -3467,7 +3467,7 @@
        "<AxesSubplot:title={'center':'Cross-validated classification metrics'}>"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3508,7 +3508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 57,
    "id": "opened-graduation",
    "metadata": {},
    "outputs": [
@@ -3655,7 +3655,7 @@
        "4   0     2       1  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3666,7 +3666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 58,
    "id": "sonic-export",
    "metadata": {},
    "outputs": [
@@ -3676,7 +3676,7 @@
        "{'C': 0.20433597178569418, 'solver': 'liblinear'}"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3688,7 +3688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 59,
    "id": "bottom-console",
    "metadata": {},
    "outputs": [
@@ -3698,7 +3698,7 @@
        "LogisticRegression(C=0.20433597178569418, solver='liblinear')"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3711,7 +3711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 60,
    "id": "another-geneva",
    "metadata": {},
    "outputs": [
@@ -3723,7 +3723,7 @@
        "         0.45051617, -0.63609863, -0.67663375]])"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3735,7 +3735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 61,
    "id": "specialized-actress",
    "metadata": {},
    "outputs": [
@@ -3757,7 +3757,7 @@
        " 'thal': -0.6766337521354281}"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3770,7 +3770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 62,
    "id": "advisory-rates",
    "metadata": {},
    "outputs": [
@@ -3780,7 +3780,7 @@
        "<AxesSubplot:title={'center':'Feature Importance'}>"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3811,7 +3811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 63,
    "id": "sustainable-johns",
    "metadata": {},
    "outputs": [
@@ -3867,7 +3867,7 @@
        "1       114  93"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3895,7 +3895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 64,
    "id": "rental-eclipse",
    "metadata": {},
    "outputs": [
@@ -3957,7 +3957,7 @@
        "2       35  107"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3988,7 +3988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 65,
    "id": "hungarian-brand",
    "metadata": {},
    "outputs": [
@@ -4056,7 +4056,7 @@
        "3         7  16"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4078,9 +4078,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "distinct-imaging",
+   "metadata": {},
+   "source": [
+    "## 6. Experimentation\n",
+    "\n",
+    "If you haven't hit your evaluation metric yet... ask yourself...\n",
+    "\n",
+    "* Could you collection more data?\n",
+    "* Could you try a better model? Like CatBoost or XGBoost?\n",
+    "* Could you improve the current models? (beyond what we've done so far)\n",
+    "* If your model is good enough (you have hit evaluation metric). How would you export your model and share it with others"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "refined-prerequisite",
+   "id": "alternate-gabriel",
    "metadata": {},
    "outputs": [],
    "source": []
